--- a/css/style.css
+++ b/css/style.css
@@ -27,25 +27,64 @@ a:hover {
   font-weight: 700;
   font-style: normal;
   display: flex;
-  font-size: 15px;
+  font-size: 1em;
   letter-spacing: 10px;
+  padding: 2% 1.5%;
 }
 .header ul {
   list-style: none;
   display: flex;
-  gap: 10px;
+  gap: 3em;
 }
 .header a {
   color: rgba(241, 241, 241, 0.9450980392);
   font-family: "Inter", "Open Sans", sans-serif;
-  font-weight: 200;
+  font-weight: 400;
   font-style: normal;
-  font-size: 10px;
+  font-size: 0.8em;
   line-height: 7px;
   letter-spacing: 1px;
 }
 .header button {
   color: rgba(241, 241, 241, 0.9450980392);
+  background-color: transparent;
+}
+.header button:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+.header button:nth-of-type(1) {
+  height: 30px;
+  background-size: cover;
+  border: none;
+  background-image: url("../images/moon-min.svg");
+  padding: 0.2em 1em;
+}
+.header button:nth-of-type(2) {
+  border-radius: 2.77px;
+  border: 0.35px solid #F1F1F1;
+  padding: 0.5em 1em;
+}
+
+.header__buttons {
+  display: flex;
+  align-items: center;
+  gap: 1em;
+}
+
+@media (max-width: 900px) {
+  .header {
+    font-size: 0.7em;
+  }
+  .header a {
+    font-size: 0.5em;
+  }
+  .header button:nth-of-type(1) {
+    height: 20px;
+  }
+  .header button:nth-of-type(2) {
+    padding: 0.3em 0.6em;
+  }
 }
 
 /*# sourceMappingURL=style.css.map */
