--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -5,26 +5,72 @@
     @include font-color($headings-font-color);
     @include fonts($main-font, 700);
     display: flex;
-    font-size: 15px;
+    font-size: 1em;
     letter-spacing: 10px;
+    padding: 2% 1.5%;
 
     ul {
         list-style: none;
         display: flex;
-        gap: 10px;
+        gap: 3em;
     }
 
     a {
         @include font-color($text-font-color);
-        @include fonts($main-font, 200);
-        font-size: 10px;
+        @include fonts($main-font, 400);
+        font-size: 0.8em;
         line-height: 7px;
         letter-spacing: 1px;
 
     }
 
     button {
-        @include font-color($text-font-color)
+        @include font-color($text-font-color);
+        background-color: transparent;
     }
+
+    button:hover {
+        cursor: pointer;
+        opacity: 0.7;
+    }
+
+    button:nth-of-type(1) {
+        height: 30px;
+        background-size: cover;
+        border: none;
+        background-image: url('../images/moon-min.svg');
+        padding: 0.2em 1em;
+    }
+
+    button:nth-of-type(2) {
+        border-radius: 2.77px;
+        border: 0.35px solid #F1F1F1;
+        padding: 0.5em 1em;
+    }
+}
+
+.header__buttons {
+    display: flex;
+    align-items: center;
+    gap: 1em;
+}
+
+@media(max-width: 900px) {
+    .header {
+        font-size: 0.7em;
+
+        a {
+            font-size: 0.5em;
+        }
+        button:nth-of-type(1){
+            height: 20px;
+        }
+    
+        button:nth-of-type(2) {
+            padding: 0.3em 0.6em;
+        }
+    }
+
+   
 }
 
