feat: add burger menu button

--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -9,10 +9,15 @@
     letter-spacing: 10px;
     padding: 2% 1.5%;
 
+    p {
+        padding-top: 3px;;
+    }
+
     ul {
         list-style: none;
         display: flex;
         gap: 3em;
+        padding-top: 5px;
     }
 
     a {
@@ -36,10 +41,14 @@
 
     button:nth-of-type(1) {
         height: 30px;
+        width: 30px;
         background-size: cover;
         border: none;
+        padding-bottom: 5px;
+    }
+
+    &__button:nth-of-type(1) {
         background-image: url('../images/moon-min.svg');
-        padding: 0.2em 1em;
     }
 
     button:nth-of-type(2) {
@@ -47,12 +56,18 @@
         border: 0.35px solid #F1F1F1;
         padding: 0.5em 1em;
     }
-}
 
-.header__buttons {
-    display: flex;
-    align-items: center;
-    gap: 1em;
+    &__buttons {
+        display: flex;
+        align-items: center;
+        gap: 1em;
+        font-size: 0.8em;
+        padding-bottom: 5px;
+    }
+
+    &__menu {
+        display: none;
+    }
 }
 
 @media(max-width: 900px) {
@@ -62,15 +77,43 @@
         a {
             font-size: 0.5em;
         }
-        button:nth-of-type(1){
-            height: 20px;
-        }
     
         button:nth-of-type(2) {
             padding: 0.3em 0.6em;
         }
+
+        nav ul{
+            display:none;
+        }
+
+        &__menu {
+            display: block;
+            background-color: transparent;
+            width: 25px;
+            height: 30px;
+            cursor: pointer;
+
+            div {
+                background-color: white;
+                width: 100%;
+                height: 3px;
+                margin-top: 5px;
+            }
+
+            &:active {
+                .one {
+                    transform: translateY(8px) rotate(45deg);
+                }
+                .two {
+                    opacity: 0;
+                }
+                .three {
+                    transform: translateY(-8px) rotate(-45deg);
+                }
+            }
+        }
+            
     }
 
-   
 }
 
