--- a/css/style.css
+++ b/css/style.css
@@ -31,10 +31,14 @@ a:hover {
   letter-spacing: 10px;
   padding: 2% 1.5%;
 }
+.header p {
+  padding-top: 3px;
+}
 .header ul {
   list-style: none;
   display: flex;
   gap: 3em;
+  padding-top: 5px;
 }
 .header a {
   color: rgba(241, 241, 241, 0.9450980392);
@@ -55,21 +59,28 @@ a:hover {
 }
 .header button:nth-of-type(1) {
   height: 30px;
+  width: 30px;
   background-size: cover;
   border: none;
+  padding-bottom: 5px;
+}
+.header__button:nth-of-type(1) {
   background-image: url("../images/moon-min.svg");
-  padding: 0.2em 1em;
 }
 .header button:nth-of-type(2) {
   border-radius: 2.77px;
   border: 0.35px solid #F1F1F1;
   padding: 0.5em 1em;
 }
-
 .header__buttons {
   display: flex;
   align-items: center;
   gap: 1em;
+  font-size: 0.8em;
+  padding-bottom: 5px;
+}
+.header__menu {
+  display: none;
 }
 
 @media (max-width: 900px) {
@@ -79,11 +90,33 @@ a:hover {
   .header a {
     font-size: 0.5em;
   }
-  .header button:nth-of-type(1) {
-    height: 20px;
-  }
   .header button:nth-of-type(2) {
     padding: 0.3em 0.6em;
+  }
+  .header nav ul {
+    display: none;
+  }
+  .header__menu {
+    display: block;
+    background-color: transparent;
+    width: 25px;
+    height: 30px;
+    cursor: pointer;
+  }
+  .header__menu div {
+    background-color: white;
+    width: 100%;
+    height: 3px;
+    margin-top: 5px;
+  }
+  .header__menu:active .one {
+    transform: translateY(8px) rotate(45deg);
+  }
+  .header__menu:active .two {
+    opacity: 0;
+  }
+  .header__menu:active .three {
+    transform: translateY(-8px) rotate(-45deg);
   }
 }
 
