--- a/scss/_index.scss
+++ b/scss/_index.scss
@@ -1,3 +1,4 @@
 @forward "../scss/config.scss";
+@forward "../scss/components/links.scss";
 @forward "../scss/abstracts/colors";
 @forward "../scss/abstracts/fonts";
