--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -10,3 +10,19 @@
     -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
+
+p, h1, h2, div, button {
+    margin-block-start: 0px;
+    margin-block-end: 0px;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+}
+
+a {
+    text-decoration: none;
+    cursor: pointer;
+}
+
+a:hover {
+    opacity: 0.7;
+}
