--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -7,14 +7,13 @@
     display: flex;
     font-size: 1em;
     letter-spacing: 10px;
-    padding: 2% 1.5%;
+    padding: 2% 2%;
 
     p {
-        padding-top: 3px;;
+        padding-top: 6px;
     }
 
     ul {
-        list-style: none;
         display: flex;
         gap: 3em;
         padding-top: 5px;
@@ -26,7 +25,6 @@
         font-size: 0.8em;
         line-height: 7px;
         letter-spacing: 1px;
-
     }
 
     button {
@@ -34,14 +32,10 @@
         background-color: transparent;
     }
 
-    button:hover {
-        cursor: pointer;
-        opacity: 0.7;
-    }
 
     button:nth-of-type(1) {
         height: 30px;
-        width: 30px;
+        width: 35px;
         background-size: cover;
         border: none;
         padding-bottom: 5px;
@@ -79,11 +73,20 @@
         }
     
         button:nth-of-type(2) {
+            display: none;
             padding: 0.3em 0.6em;
         }
 
         nav ul{
             display:none;
+        }
+
+        &__button:nth-of-type(1) {
+            margin-right: 0;
+        }
+
+        &__buttons {
+            margin-right: 0;
         }
 
         &__menu {
@@ -92,15 +95,17 @@
             width: 25px;
             height: 30px;
             cursor: pointer;
+            margin-left: 10px;
+            z-index: 2;
 
             div {
-                background-color: white;
+                background-color: #F1F1F1;
                 width: 100%;
                 height: 3px;
                 margin-top: 5px;
             }
 
-            &:active {
+            &_open {
                 .one {
                     transform: translateY(8px) rotate(45deg);
                 }
@@ -112,8 +117,13 @@
                 }
             }
         }
+
             
     }
 
 }
 
+/*&__button:nth-of-type(1) {
+    height: 30px;
+    width: 35px;
+}*/
