--- a/scss/blocks/_menu__popup.scss
+++ b/scss/blocks/_menu__popup.scss
@@ -6,7 +6,7 @@
     left: 0;
     width: 100%;
     height: 100%;
-    @include background-color(header);
+    background-color: $background-light;
     justify-content: center;
     flex-direction: column;
     z-index: 1;
@@ -28,6 +28,7 @@
         border: 0.35px solid #F1F1F1;
         font-size: 0.8em;
         background-color: transparent;
+       // color: set-text-color(#F1F1F1);
         color: #F1F1F1;
         padding: 0.5em 1em;
     }
