--- a/scss/components/_links.scss
+++ b/scss/components/_links.scss
@@ -7,3 +7,12 @@ a:hover {
     opacity: 0.7;
 }
 
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+button:hover {
+    cursor: pointer;
+    opacity: 0.7;
+}
