--- a/css/style.css
+++ b/css/style.css
@@ -27,12 +27,32 @@ a:hover {
   opacity: 0.7;
 }
 
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+button:hover {
+  cursor: pointer;
+  opacity: 0.7;
+}
+
 a {
   text-decoration: none;
   cursor: pointer;
 }
 
 a:hover {
+  opacity: 0.7;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+
+button:hover {
+  cursor: pointer;
   opacity: 0.7;
 }
 
@@ -50,44 +70,21 @@ a:hover {
     background-color: $color;
     color: set-text-color($color);
 } */
-a {
-  font-family: "Inter", "Open Sans", sans-serif;
-  font-weight: 400;
-  font-style: normal;
-  font-size: 0.8em;
-  line-height: 7px;
-  letter-spacing: 1px;
-  color: #232E35;
-}
-
-ul {
-  list-style: none;
-  padding: 0;
-}
-
-button:hover {
-  cursor: pointer;
-  opacity: 0.7;
-}
-
 .header {
   font-family: "Inter", "Open Sans", sans-serif;
   font-weight: 700;
   font-style: normal;
-  color: #232E35;
+  color: rgba(241, 241, 241, 0.9450980392);
   display: flex;
   font-size: 1em;
-  background-color: #FFFFFF;
+  background-color: #1E1E1E;
   letter-spacing: 10px;
   padding: 2% 2%;
-}
-.header p {
-  padding-top: 6px;
+  align-items: center;
 }
 .header ul {
   display: flex;
   gap: 3em;
-  padding-top: 5px;
 }
 .header a {
   font-family: "Inter", "Open Sans", sans-serif;
@@ -96,6 +93,7 @@ button:hover {
   font-size: 0.8em;
   line-height: 7px;
   letter-spacing: 1px;
+  color: rgba(241, 241, 241, 0.9450980392);
 }
 .header button {
   color: rgba(241, 241, 241, 0.9450980392);
@@ -106,7 +104,7 @@ button:hover {
   width: 35px;
   background-size: cover;
   border: none;
-  padding-bottom: 5px;
+  padding-bottom: 8px;
 }
 .header__button_color {
   background-image: url("../images/moon-min.svg");
@@ -116,6 +114,10 @@ button:hover {
 }
 .header__button_color_type_grey {
   background-image: url("../images/frame.svg");
+}
+.header__nav {
+  display: flex;
+  align-items: center;
 }
 .header button:nth-of-type(2) {
   border-radius: 2.77px;
@@ -178,17 +180,27 @@ button:hover {
     transform: translateY(-8px) rotate(-45deg);
   }
 }
-/*&__button:nth-of-type(1) {
-    height: 30px;
-    width: 35px;
-}*/
+.header__theme_light {
+  color: #232E35;
+  background-color: #FFFFFF;
+}
+.header__theme_light a {
+  color: #232E35;
+}
+.header__theme_light button:nth-of-type(2) {
+  border: 1px solid #B7B7B7;
+}
+.header__theme_light .header__menu div {
+  background-color: #1E1E1E;
+}
+
 .menu__popup {
   position: fixed;
   top: 0;
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: #FFFFFF;
+  background-color: #1E1E1E;
   justify-content: center;
   flex-direction: column;
   z-index: 1;
@@ -202,19 +214,40 @@ button:hover {
 }
 .menu__popup ul {
   margin-bottom: 100%;
+  gap: 3em;
 }
 .menu__popup_button {
   border-radius: 2.77px;
-  border: 0.35px solid #F1F1F1;
+  border: 1px solid #F1F1F1;
   font-size: 0.8em;
   background-color: transparent;
   color: #F1F1F1;
   padding: 0.5em 1em;
 }
+.menu__popup a {
+  font-family: "Inter", "Open Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 0.8em;
+  line-height: 7px;
+  letter-spacing: 1px;
+  color: rgba(241, 241, 241, 0.9450980392);
+}
 
 .menu__popup_opened {
   visibility: visible;
   opacity: 1;
+}
+
+.menu__popup_theme_light {
+  color: #232E35;
+  background-color: #FFFFFF;
+}
+.menu__popup_theme_light a {
+  color: #232E35;
+}
+.menu__popup_theme_light_button {
+  border: 1px solid #B7B7B7;
 }
 
 /*# sourceMappingURL=style.css.map */
