--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -27,3 +27,13 @@ a:hover {
     opacity: 0.7;
 }
 
+
+ul {
+    list-style: none;
+    padding: 0;
+}
+
+button:hover {
+    cursor: pointer;
+    opacity: 0.7;
+}
