feat: about me section

--- a/scss/blocks/_menu__popup.scss
+++ b/scss/blocks/_menu__popup.scss
@@ -56,8 +56,7 @@
         color: set-text-color($background-light);
     }
 
-    &_button  {
+    .menu__popup_button  {
         border: 1px solid #B7B7B7;
-    
     }
 }
