--- a/scss/style.scss
+++ b/scss/style.scss
@@ -1,5 +1,7 @@
 @use "../scss/index";
-@use "../scss/components/links";
 @use "../scss/blocks/header";
 @use "../scss/blocks/menu__popup";
-
+@use "../scss/blocks/about-me";
+@use "../scss/blocks/sub-heading";
+@use "../scss/blocks/cloud";
+@use "../scss/blocks/skills";
