--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css2?family=Poppins&display=swap");
 * {
   -webkit-text-size-adjust: 100%;
   -ms-text-size-adjust: 100%;
@@ -9,6 +10,10 @@
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
+}
+
+body {
+  position: relative;
 }
 
 p, h1, h2, div, button {
@@ -25,6 +30,9 @@ a {
 
 a:hover {
   opacity: 0.7;
+  text-decoration: underline;
+  text-decoration-thickness: 3px;
+  text-decoration-color: #7E74F1;
 }
 
 ul {
@@ -37,25 +45,21 @@ button:hover {
   opacity: 0.7;
 }
 
-a {
-  text-decoration: none;
-  cursor: pointer;
+h1, h2 {
+  font-family: "Plus Jakarta Sans";
+  font-weight: 700;
+  letter-spacing: normal;
 }
 
-a:hover {
-  opacity: 0.7;
+h1 {
+  font-size: 30px;
 }
 
-ul {
-  list-style: none;
-  padding: 0;
+@media (max-width: 500px) {
+  h1 {
+    margin-top: 10px;
+  }
 }
-
-button:hover {
-  cursor: pointer;
-  opacity: 0.7;
-}
-
 /*@function set-text-color($color) {
     @if(lightness($color) > 70) {
         @return #232E35;
@@ -76,11 +80,14 @@ button:hover {
   font-style: normal;
   color: rgba(241, 241, 241, 0.9450980392);
   display: flex;
-  font-size: 1em;
+  font-size: 1.5em;
   background-color: #1E1E1E;
   letter-spacing: 10px;
-  padding: 2% 2%;
+  padding: 2% 4%;
   align-items: center;
+  position: sticky;
+  top: 0;
+  z-index: 2;
 }
 .header ul {
   display: flex;
@@ -137,7 +144,7 @@ button:hover {
 
 @media (max-width: 900px) {
   .header {
-    font-size: 0.7em;
+    font-size: 1.1em;
   }
   .header a {
     font-size: 0.5em;
@@ -246,8 +253,216 @@ button:hover {
 .menu__popup_theme_light a {
   color: #232E35;
 }
-.menu__popup_theme_light_button {
+.menu__popup_theme_light .menu__popup_button {
   border: 1px solid #B7B7B7;
+}
+
+.about-me {
+  color: rgba(241, 241, 241, 0.9450980392);
+  display: flex;
+  font-size: 1em;
+  background-color: #1E1E1E;
+  padding: 8% 4%;
+  align-items: center;
+  justify-content: space-between;
+}
+.about-me__links {
+  margin-top: 20px;
+  width: 90px;
+  margin-left: -25px;
+}
+.about-me__links .about-me__link-image {
+  width: 40px;
+  height: 40px;
+  position: relative;
+}
+.about-me__link {
+  font-size: 0em !important;
+  width: 0;
+}
+.about-me h1:after {
+  content: " Iuferova";
+  color: #7E74F1;
+}
+.about-me__image {
+  position: relative;
+  width: 50vw;
+  height: 400px;
+}
+.about-me__decor {
+  background-color: #7E74F1;
+  height: 350px;
+  width: 300px;
+  border-radius: 8px;
+  transform: rotate(-10deg);
+  position: absolute;
+  left: 28%;
+}
+.about-me img {
+  height: 350px;
+  width: 300px;
+  border-radius: 8px;
+  position: absolute;
+  z-index: 1;
+  left: 28%;
+  object-fit: cover;
+}
+.about-me__image:hover {
+  transform: scale(1.2);
+  transition: transform ease-in-out 200ms;
+}
+.about-me img:hover {
+  cursor: pointer;
+  transform: rotate(10deg);
+  transition: transform ease-in-out 200ms;
+}
+.about-me__content {
+  width: 40vw;
+}
+.about-me__content p {
+  font-family: "Inter", "Open Sans", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 15px;
+  line-height: 30px;
+  color: rgba(241, 241, 241, 0.7);
+  margin-top: 20px;
+}
+
+@media (max-width: 900px) {
+  .about-me__content {
+    width: 50vw;
+  }
+  .about-me p {
+    font-size: 10px;
+    line-height: 20px;
+  }
+  .about-me__image {
+    width: 50vw;
+    height: 300px;
+  }
+  .about-me__decor {
+    height: 300px;
+    width: 250px;
+    left: 20%;
+  }
+  .about-me img {
+    height: 300px;
+    width: 250px;
+    left: 20%;
+  }
+}
+@media (max-width: 680px) {
+  .about-me__image {
+    width: 60vw;
+    height: 250px;
+  }
+  .about-me__decor {
+    height: 250px;
+    width: 200px;
+    left: 30%;
+  }
+  .about-me img {
+    height: 250px;
+    width: 200px;
+    left: 30%;
+  }
+}
+@media (max-width: 560px) {
+  .about-me__image {
+    width: 70vw;
+    height: 250px;
+  }
+  .about-me__decor {
+    height: 220px;
+    width: 170px;
+  }
+  .about-me img {
+    height: 220px;
+    width: 170px;
+  }
+}
+@media (max-width: 500px) {
+  .about-me {
+    flex-direction: column;
+    gap: 40px;
+    padding: 10% 4%;
+  }
+  .about-me__links {
+    margin-left: 0;
+  }
+  .about-me__content {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+  .about-me p {
+    width: 90%;
+  }
+  .about-me__image {
+    width: 40vw;
+  }
+  .about-me__decor {
+    left: -5%;
+  }
+  .about-me img {
+    left: -5%;
+  }
+}
+.about-me_theme_light {
+  color: #232E35;
+  background-color: #FFFFFF;
+}
+.about-me_theme_light p {
+  color: #232E35;
+}
+
+.sub-heading {
+  font-family: "Inter", "Open Sans", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  text-transform: uppercase;
+  color: #656D72;
+  letter-spacing: 10px;
+  font-size: 10px;
+  margin-left: 10px;
+  position: relative;
+  margin-bottom: 10px;
+  padding-left: 10px;
+}
+
+.sub-heading::before {
+  content: url(../../images/Above\ title\ line.svg);
+  position: absolute;
+  margin-left: -15px;
+  bottom: 4px;
+}
+
+@media (max-width: 500px) {
+  .sub-heading {
+    margin-top: 20px;
+  }
+}
+body {
+  background-color: #000;
+}
+
+.tagcloud {
+  font-family: "Poppins", sans-serif;
+  font-size: 20px;
+  margin: auto;
+  width: 50%;
+  color: #7E74F1;
+}
+
+.tagcloud--item:hover {
+  color: #36454F;
+  cursor: pointer;
+}
+
+#skills {
+  padding-top: 0;
 }
 
 /*# sourceMappingURL=style.css.map */
