--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -11,6 +11,10 @@
     box-sizing: border-box;
 }
 
+body {
+    position: relative;
+}
+
 p, h1, h2, div, button {
     margin-block-start: 0px;
     margin-block-end: 0px;
@@ -25,6 +29,10 @@ a {
 
 a:hover {
     opacity: 0.7;
+    text-decoration: underline;
+    text-decoration-thickness: 3px;
+    text-decoration-color:  #7E74F1;
+
 }
 
 
@@ -36,4 +44,20 @@ ul {
 button:hover {
     cursor: pointer;
     opacity: 0.7;
+}
+
+h1, h2 {
+    font-family: 'Plus Jakarta Sans';
+    font-weight: 700;
+    letter-spacing: normal;
+}
+
+h1 {
+    font-size: 30px;
+}
+
+@media(max-width: 500px) {
+    h1 {
+        margin-top: 10px;
+}
 }
