--- a/scss/blocks/_header.scss
+++ b/scss/blocks/_header.scss
@@ -1,15 +1,17 @@
 @use "../index" as *;
 
-
 .header {
     @include fonts($main-font, 700);
     color: set-text-color($background-dark);
     display: flex;
-    font-size: 1em;
+    font-size: 1.5em;
     background-color: $background-dark;
     letter-spacing: 10px;
-    padding: 2% 2%;
+    padding: 2% 4%;
     align-items: center;
+    position: sticky;
+    top: 0;
+    z-index: 2;
 
 
     ul {
@@ -77,7 +79,7 @@
 
 @media(max-width: 900px) {
     .header {
-        font-size: 0.7em;
+        font-size: 1.1em;
 
         a {
             font-size: 0.5em;
