--- a/scss/_config.scss
+++ b/scss/_config.scss
@@ -49,7 +49,7 @@ button:hover {
 h1, h2 {
     font-family: 'Plus Jakarta Sans';
     font-weight: 700;
-    letter-spacing: normal;
+    letter-spacing: 0.1em;
 }
 
 h1 {
@@ -57,7 +57,7 @@ h1 {
 }
 
 @media(max-width: 500px) {
-    h1 {
+    h1, h2 {
         margin-top: 10px;
 }
 }
