--- a/scss/blocks/_swiper.scss
+++ b/scss/blocks/_swiper.scss
@@ -22,7 +22,7 @@
   }
 
   .swiper-pagination {
-    padding-top: 100px !important;
+    margin-top: 100px !important;
   }
 
   .swiper-pagination-bullet-active {
@@ -34,9 +34,25 @@
     background-color:  #656D72;
 }
 
+.slide-image-container {
+  width: 100%;
+  height: 70%;
+  position: relative;
+}
+
+.slide-image-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  z-index: 10;
+  background-color:  rgba(0, 0, 0, 0.5);
+  left: 0;
+  top: 0;
+}
+
   .swiper-slide img{
     width: 100%;
-    height: 70%;
+    height: 100%;
     object-fit: cover;
     left: auto;
     position: static;
@@ -47,15 +63,14 @@
     transform: none !important;
   }
   .swiper-button-next, .swiper-rtl .swiper-button-prev{
-    color: white !important;
-
+    color:  #7E74F1 !important;
   }
 
 
   .swiper-button-prev, .swiper-rtl .swiper-button-next{
-    color:  white  !important;
-
+    color:  #7E74F1 !important;
   }
+
 
 
   .slide-content {
@@ -77,14 +92,9 @@
 
     a {
         padding-left: 10px;
-        font-size: 0em !important;
+        //font-size: 0em !important;
         cursor: pointer;
         }
-    }
-
-    .slide__link-image {
-        width: 25px !important;
-        height: 25px !important;
     }
 
     .slide-techs {
@@ -99,8 +109,24 @@
     }
 
     .slide-link-container {
-            margin-left: 5px;
-            position: static;
+            margin-left: 15px;
+            width: 70px;
+            display: flex;
+
+    }
+
+    .slide__link_repo {
+      background-image:url(../../images/Github-grey.svg);
+      background-size: cover;
+      height:25px;
+      width:25px;
+    }
+
+    .slide__link_web {
+      background:url(../../images/Link-min.svg);
+      background-size: cover;
+      height:25px;
+      width:25px;
     }
 
 
@@ -114,8 +140,4 @@
         width: auto !important;
     }
 
-    .slide__link-image {
-        width: 20px !important;
-        height: 20px !important;
-    }
     }
