--- a/css/style.css
+++ b/css/style.css
@@ -385,7 +385,7 @@ h1 {
 @media (max-width: 500px) {
   .about-me {
     flex-direction: column;
-    gap: 40px;
+    gap: 15px;
     padding: 10% 4%;
   }
   .about-me__links {
@@ -416,6 +416,9 @@ h1 {
 }
 .about-me_theme_light p {
   color: #232E35;
+}
+.about-me_theme_light .swiper-slide {
+  border: 0.5px solid rgba(101, 109, 114, 0.5);
 }
 
 .sub-heading {
@@ -513,9 +516,10 @@ h1 {
 .swiper {
   width: 90%;
   height: 400px;
-  margin-top: 5%;
   font-family: "Plus Jakarta Sans";
   font-weight: 500;
+  margin-top: 22px;
+  border-radius: 10px !important;
 }
 
 .swiper-wrapper {
@@ -524,11 +528,11 @@ h1 {
 
 .swiper-slide {
   font-size: 18px;
-  background-color: aliceblue;
+  background-color: white;
   display: flex;
   flex-direction: column;
   padding: 0;
-  border-radius: 10px;
+  border-radius: 10px !important;
 }
 
 .swiper-pagination {
@@ -558,6 +562,10 @@ h1 {
   background-color: rgba(0, 0, 0, 0.5);
   left: 0;
   top: 0;
+  border-top-left-radius: 10px;
+  border-top-right-radius: 10px;
+  border-bottom-left-radius: 0;
+  border-bottom-right-radius: 0;
 }
 
 .swiper-slide img {
@@ -606,7 +614,7 @@ h1 {
   font-family: "Inter", sans-serif;
   font-weight: 200;
   padding: 3px;
-  border: 1px solid rgba(101, 109, 114, 0.5);
+  border: 0.7px solid rgba(101, 109, 114, 0.5);
   display: inline;
   border-radius: 3px;
   color: #656D72;
@@ -634,11 +642,155 @@ h1 {
 }
 
 @media (max-width: 500px) {
+  .swiper {
+    margin-top: 10px;
+  }
   h4 {
     font-size: 15px;
   }
   .slide-techs {
     width: auto !important;
+  }
+}
+#contact {
+  background-color: #EEEEEE;
+  color: #232E35;
+  flex-direction: column;
+  align-items: flex-start;
+}
+#contact form {
+  display: flex;
+  flex-direction: column;
+  border: none;
+  width: 50vw;
+}
+#contact form ::placeholder {
+  font-size: 200;
+  font-family: "Inter", "Open Sans", sans-serif;
+  font-style: normal;
+}
+#contact .submit {
+  background-color: #7E74F1;
+  color: white;
+  cursor: pointer;
+}
+#contact .submit:hover {
+  opacity: 0.7;
+}
+#contact fieldset {
+  display: flex;
+  flex-direction: column;
+  align-items: flex-start;
+  margin-inline-start: 2px;
+  margin-inline-end: 0;
+  padding-block-start: 0;
+  padding-inline-start: 0;
+  padding-inline-end: 0;
+  padding-block-end: 0;
+  border: none;
+}
+#contact input {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 50px;
+  border-radius: 10px;
+  border: none;
+  margin-top: 10px;
+  padding: 10px;
+}
+#contact textarea:focus, #contact input:focus {
+  outline-color: #7E74F1;
+}
+#contact textarea {
+  padding: 0;
+  margin: 0;
+  width: 100%;
+  height: 200px;
+  border-radius: 10px;
+  border: none;
+  margin-top: 10px;
+  padding: 10px;
+}
+
+.all-contacts {
+  display: flex;
+  width: 100%;
+}
+
+.contact-info {
+  padding-top: 10px;
+  margin-left: 150px;
+}
+.contact-info p {
+  font-family: "Open Sans", sans-serif;
+  color: #232E35;
+  font-weight: 100;
+  padding-bottom: 30px;
+  padding-left: 20px;
+}
+.contact-info h4 {
+  font-weight: 200;
+  font-family: "Inter", "Open Sans", sans-serif;
+  font-style: normal;
+  padding-bottom: 5px;
+  padding-left: 20px;
+}
+
+.info-container {
+  position: relative;
+}
+
+.info-container:nth-last-of-type(1)::before {
+  content: url(/images/Email.svg);
+  position: absolute;
+  left: -65px;
+  top: -6px;
+}
+
+.info-container:nth-last-of-type(2)::before {
+  content: url(/images/Phone.svg);
+  position: absolute;
+  left: -65px;
+  top: -6px;
+}
+
+.info-container:nth-last-of-type(3)::before {
+  content: url(/images/Address.svg);
+  position: absolute;
+  left: -65px;
+  top: -6px;
+}
+
+@media (max-width: 768px) {
+  .contact-info {
+    margin-left: 100px;
+  }
+}
+@media (max-width: 600px) {
+  #contact {
+    flex-direction: column;
+    align-items: flex-start;
+  }
+  #contact form {
+    width: 80vw;
+    align-self: center;
+  }
+  #contact .all-contacts {
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    width: 100%;
+  }
+  #contact .form-container {
+    align-self: center;
+    margin-top: 10px;
+  }
+  #contact .contact-info {
+    padding-top: 25px;
+    margin-left: 0px;
+    margin-left: 30px;
+    margin-top: 20px;
   }
 }
 
