--- a/scss/blocks/_swiper.scss
+++ b/scss/blocks/_swiper.scss
@@ -70,12 +70,12 @@
     transform: none !important;
   }
   .swiper-button-next, .swiper-rtl .swiper-button-prev{
-    color:  #7E74F1 !important;
+    color:  white !important;
   }
 
 
   .swiper-button-prev, .swiper-rtl .swiper-button-next{
-    color:  #7E74F1 !important;
+    color:   white !important;
   }
 
 
