--- a/css/style.css
+++ b/css/style.css
@@ -582,11 +582,11 @@ h1 {
 }
 
 .swiper-button-next, .swiper-rtl .swiper-button-prev {
-  color: #7E74F1 !important;
+  color: white !important;
 }
 
 .swiper-button-prev, .swiper-rtl .swiper-button-next {
-  color: #7E74F1 !important;
+  color: white !important;
 }
 
 .slide-content {
@@ -716,6 +716,7 @@ h1 {
 .all-contacts {
   display: flex;
   width: 100%;
+  margin-top: 20px;
 }
 
 .contact-info {
@@ -781,6 +782,7 @@ h1 {
     align-items: center;
     justify-content: center;
     width: 100%;
+    margin-top: 0;
   }
   #contact .form-container {
     align-self: center;
@@ -791,6 +793,23 @@ h1 {
     margin-left: 0px;
     margin-left: 30px;
     margin-top: 20px;
+  }
+}
+.footer {
+  background-color: FFFFFF;
+  width: 100vw;
+  display: flex;
+  justify-content: center;
+}
+.footer img {
+  width: 40px;
+  margin: 25px;
+}
+
+@media (max-width: 600px) {
+  .footer img {
+    width: 20px;
+    margin: 15px;
   }
 }
 
