--- a/scss/blocks/_contact.scss
+++ b/scss/blocks/_contact.scss
@@ -78,6 +78,7 @@
 .all-contacts {
     display: flex;
     width: 100%;
+    margin-top: 20px;
 }
 
 .contact-info {
@@ -152,6 +153,7 @@
         align-items: center;
         justify-content: center;
         width: 100%;
+        margin-top: 0;
     }
 
     .form-container {
