--- a/scss/style.scss
+++ b/scss/style.scss
@@ -7,4 +7,5 @@
 @use "../scss/blocks/skills";
 @use "../scss/blocks/projects";
 @use "../scss/blocks/swiper";
-@use "../scss/blocks/contact"
+@use "../scss/blocks/contact";
+@use "../scss/blocks/footer";
