--- a/src/scss/_config.scss
+++ b/src/scss/_config.scss
@@ -47,7 +47,7 @@ button:hover {
 }
 
 h1, h2 {
-    font-family: 'Plus Jakarta Sans';
+    font-family: 'Poppins';
     font-weight: 700;
     letter-spacing: 0.1em;
 }
