--- a/src/scss/abstracts/_fonts.scss
+++ b/src/scss/abstracts/_fonts.scss
@@ -1,5 +1,5 @@
 $main-font: "Inter", "Open Sans", sans-serif;
-$additional-font: "Plus Jakarta Sans";
+$additional-font: "Poppins";
 
 @mixin fonts($font-family, $font-weight) {
     font-family: $font-family;
