--- a/src/scss/blocks/_swiper.scss
+++ b/src/scss/blocks/_swiper.scss
@@ -3,7 +3,7 @@
 .swiper {
     width: 90%;
     height: 400px;
-    font-family: 'Plus Jakarta Sans';
+    font-family: 'Poppins';
     font-weight: 500;
     margin-top: 22px;
     border-radius: 10px !important;
