--- a/src/css/style.css
+++ b/src/css/style.css
@@ -46,7 +46,7 @@ button:hover {
 }
 
 h1, h2 {
-  font-family: "Plus Jakarta Sans";
+  font-family: "Poppins";
   font-weight: 700;
   letter-spacing: 0.1em;
 }
@@ -436,7 +436,7 @@ h1 {
 }
 
 .sub-heading::before {
-  content: url(../../images/Above\ title\ line.svg);
+  content: url(../images/Above\ title\ line.svg);
   position: absolute;
   margin-left: -15px;
   bottom: 4px;
@@ -516,7 +516,7 @@ h1 {
 .swiper {
   width: 90%;
   height: 400px;
-  font-family: "Plus Jakarta Sans";
+  font-family: "Poppins";
   font-weight: 500;
   margin-top: 22px;
   border-radius: 10px !important;
@@ -628,14 +628,14 @@ h1 {
 }
 
 .slide__link_repo {
-  background-image: url(../../images/Github-grey.svg);
+  background-image: url(../images/Github-grey.svg);
   background-size: cover;
   height: 25px;
   width: 25px;
 }
 
 .slide__link_web {
-  background: url(../../images/Link-min.svg);
+  background: url(../images/Link-min.svg);
   background-size: cover;
   height: 25px;
   width: 25px;
@@ -743,21 +743,21 @@ h1 {
 }
 
 .info-container:nth-last-of-type(1)::before {
-  content: url(/images/Email.svg);
+  content: url(../images/Email.svg);
   position: absolute;
   left: -65px;
   top: -6px;
 }
 
 .info-container:nth-last-of-type(2)::before {
-  content: url(/images/Phone.svg);
+  content: url(../images/Phone.svg);
   position: absolute;
   left: -65px;
   top: -6px;
 }
 
 .info-container:nth-last-of-type(3)::before {
-  content: url(/images/Address.svg);
+  content: url(../images/Address.svg);
   position: absolute;
   left: -65px;
   top: -6px;
