--- a/src/scss/blocks/_cloud.scss
+++ b/src/scss/blocks/_cloud.scss
@@ -1,9 +1,7 @@
 @use "../index" as *;
-@import url('https://fonts.googleapis.com/css2?family=Poppins&display=swap');
-
 
 .tagcloud {
-    font-family: 'Poppins', sans-serif;  
+  @include fonts($additional-font, 400); 
     font-size: 20px;
     margin: auto;
     width: 50%;
