--- a/src/scss/blocks/_contact.scss
+++ b/src/scss/blocks/_contact.scss
@@ -17,8 +17,7 @@
     
 
     form ::placeholder {
-        font-size: 200;
-        font-family: "Inter", "Open Sans", sans-serif;
+        @include fonts($main-font, 400); 
         font-style: normal;
     }
 
@@ -86,7 +85,7 @@
     margin-left: 150px;
 
     p {
-        font-family: "Open Sans", sans-serif;
+        @include fonts("Open Sans", sans-serif, 400); 
         color: set-text-color($background-grey);
         font-weight: 100;
         padding-bottom: 30px;
@@ -95,7 +94,7 @@
 
     h4 {
         font-weight: 200;
-        font-family: "Inter", "Open Sans", sans-serif;
+        @include fonts($main-font, 400); 
         font-style: normal;
         padding-bottom: 5px;
         padding-left: 20px;
@@ -107,7 +106,7 @@
 }
 
 .info-container:nth-last-of-type(1)::before {
-    content: url(/images/Email.svg);
+    content: url(./images/Email.svg);
     position: absolute;
     left: -65px;
     top: -6px;
@@ -115,7 +114,7 @@
 }
 
 .info-container:nth-last-of-type(2)::before {
-    content: url(/images/Phone.svg);
+    content: url(../../../src/images/Address.svg);
     position: absolute;
     left: -65px;
     top: -6px;
@@ -124,7 +123,7 @@
 }
 
 .info-container:nth-last-of-type(3)::before{
-    content: url(/images/Address.svg);
+    content: url(./images/Address.svg);
     position: absolute;
     left: -65px;
     top: -6px;
@@ -133,7 +132,7 @@
 }
 
 @media (max-width: 768px) {
-    .contact-info {
+    .contact-info { 
         margin-left: 100px;
     }
 }
