--- a/src/scss/blocks/_contact.scss
+++ b/src/scss/blocks/_contact.scss
@@ -85,7 +85,7 @@
     margin-left: 150px;
 
     p {
-        @include fonts("Open Sans", sans-serif, 400); 
+        @include fonts("Open Sans", 400); 
         color: set-text-color($background-grey);
         font-weight: 100;
         padding-bottom: 30px;
